[fix]Overflow login

--- a/src/App/Pages/Home/styles.scss
+++ b/src/App/Pages/Home/styles.scss
@@ -74,7 +74,7 @@
     bottom: 0;
     margin: auto;
     flex-direction: column;
-    height: 30%;
+    height: fit-content;
     width: 50%;
     background-color: var(--white);
     border-radius: 10px;
